# gazehome-final

./: .gitignore  README.md
edge-module/: .gitignore  CALIBRATION_FIX.md  LICENSE  Mac에서_실행_라즈베리파이_접속_가이드.md  README.md  SETUP_COMPLETE.md  SETUP_GUIDE.md  SYSTEM_ARCHITECTURE_VERIFICATION.md  check_db_status.py  generate_calibration.py  generate_test_data.py  package-lock.json  pyproject.toml  requirements.txt  reset_all_data.py  reset_calibration.py  setup.sh  라즈베리파이 실행 가이드.md  라즈베리파이_uv_설치_가이드.md  라즈베리파이_개발_사이클.md  라즈베리파이_설치가이드.md  라즈베리파이_최적화_설치_및_실행.md  설치가이드_선택가이드.md  테스트_가이드.md
edge-module/backend/: __init__.py  run.py
edge-module/backend/api/: __init__.py  calibration.py  devices.py  main.py  recommendations.py  settings.py  users.py  websocket.py
edge-module/backend/core/: __init__.py  config.py  database.py  device_actions.py  gaze_tracker.py
edge-module/backend/integrations/: __init__.py
edge-module/backend/services/: ai_client.py  device_state_manager.py  gateway_client.py
edge-module/docs/: BACKEND_OPTIMIZATION_REVIEW.md  OPTIMIZATION_GUIDE.md  api_documentation.md  backend.md  database_schema_detailed.md  frontend.md
edge-module/frontend/: index.html  package-lock.json  package.json  vite.config.js
edge-module/frontend/src/: App.jsx  main.jsx
edge-module/frontend/src/components/: DeviceCard.css  DeviceCard.jsx  GazeCursor.css  GazeCursor.jsx  RecommendationModal.css  RecommendationModal.jsx
edge-module/frontend/src/pages/: CalibrationPage.css  CalibrationPage.jsx  HomePage.css  HomePage.jsx  OnboardingPage.css  OnboardingPage.jsx  SettingsPage.css  SettingsPage.jsx
edge-module/frontend/src/styles/: global.css
edge-module/frontend/src/utils/: deviceActions.js  gazeRegistry.js  mqttMonitor.js
edge-module/model/: __init__.py  _version.py  constants.py  gaze.py
edge-module/model/calibration/: __init__.py  adaptive.py  common.py  five_point.py  lissajous.py  nine_point.py
edge-module/model/filters/: __init__.py  base.py  kalman.py  kde.py  noop.py
edge-module/model/models/: __init__.py  base.py  elastic_net.py  ridge.py  svr.py  tiny_mlp.py
edge-module/model/utils/: draw.py  input.py  screen.py  video.py
